<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <Button
        android:id="@+id/button_A"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="10dp"
        android:text="@string/button_A"
        app:layout_constraintBottom_toTopOf="@+id/button_D"
        app:layout_constraintEnd_toStartOf="@+id/button_B"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_B"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="10dp"
        android:text="@string/button_B"
        app:layout_constraintBottom_toTopOf="@+id/button_E"
        app:layout_constraintEnd_toStartOf="@+id/button_C"
        app:layout_constraintStart_toEndOf="@+id/button_A"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496" />

    <Button
        android:id="@+id/button_C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="40dp"
        android:text="@string/button_C"
        app:layout_constraintBottom_toTopOf="@+id/button_F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_B"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_D"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="10dp"
        android:text="@string/button_D"
        app:layout_constraintBottom_toTopOf="@+id/myTextView"
        app:layout_constraintEnd_toStartOf="@+id/button_E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_A" />

    <Button
        android:id="@+id/button_E"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/button_E"
        app:layout_constraintBottom_toTopOf="@+id/myTextView"
        app:layout_constraintEnd_toStartOf="@+id/button_F"
        app:layout_constraintStart_toEndOf="@+id/button_D"
        app:layout_constraintTop_toBottomOf="@id/button_B" />

    <Button
        android:id="@+id/button_F"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="40dp"
        android:text="@string/button_F"
        app:layout_constraintBottom_toTopOf="@+id/myTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_E"
        app:layout_constraintTop_toBottomOf="@+id/button_C" />

    <TextView
        android:id="@+id/myTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:text="@string/pressedOrigin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_E" />
</androidx.constraintlayout.widget.ConstraintLayout>